--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,22 +15,57 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
-        <activity android:name=".SecondActivity"
-            android:label="1test/test"
-            >
-            <!--所有acivity都必须配置这个action和category-->
+        <!-- 所有activity必须配置label -->
+        <activity
+            android:name=".SecondActivity"
+            android:label="1test/test">
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
-        <activity android:name=".LargeImageViewActivity"
-            android:label="Graphics/BitmapRegionDecoder/simpledecode"
+        <!-- 所有activity必须配置label -->
+        <activity
+            android:name=".LargeImageViewActivity"
+            android:label="Graphics/BitmapRegionDecoder/simpledecode">
+
+            <!-- 所有acivity都必须配置这个action和category -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.SAMPLE_CODE" />
+            </intent-filter>
+        </activity>
+        <!-- 所有activity必须配置label -->
+        <activity
+            android:name=".ImageViewerActivity"
+            android:label="Graphics/BitmapRegionDecoder/decodeLargeImg">
+
+            <!-- 所有acivity都必须配置这个action和category -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.SAMPLE_CODE" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".LargeImgActivity"
+            android:label="Graphics/BitmapRegionDecoder/decodeLargeImg2">
+
+            <!-- 所有acivity都必须配置这个action和category -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.SAMPLE_CODE" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ObscuredActivity"
+            android:label="Graphics/毛玻璃"
             >
-            <!--所有acivity都必须配置这个action和category-->
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
