--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ android {
         task ->
             if (
             task.name.contains("lint")
-                    || task.name.equals("clean")
                     || task.name.contains("Aidl")
                     || task.name.contains("mockableAndroidJar")
                     || task.name.contains("UnitTest")
@@ -20,12 +19,12 @@ android {
     }
 
 
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.test.emptydemo"
         minSdkVersion 21
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -38,5 +37,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':alipay')
+    compile 'com.lzy.net:okgo:2.1.4'
+    compile 'com.lzy.net:okrx:0.1.2'
+    compile 'com.lzy.net:okserver:1.1.3'
 }
