--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.test.emptydemo">
-
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +20,20 @@
         </activity>
         <!--所有activity必须配置label-->
         <activity android:name=".SecondActivity"
-            android:label="1test/test"
+            android:label="1camera/takepic"
+            android:theme="@style/Base.Theme.AppCompat"
+            >
+            <!--所有acivity都必须配置这个action和category-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.SAMPLE_CODE" />
+            </intent-filter>
+        </activity>
+        <!--所有activity必须配置label-->
+        <activity android:name=".DualScrollViewActivity1"
+            android:label="1touch/multiscrollview"
+            android:theme="@style/Base.Theme.AppCompat"
             >
             <!--所有acivity都必须配置这个action和category-->
             <intent-filter>
