--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <!--所有activity必须配置label-->
         <activity android:name=".SecondActivity"
-            android:label="animation/circleexpand"
+            android:label="animation/circleExpand"
             >
             <!--所有acivity都必须配置这个action和category-->
             <intent-filter>
