--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ android {
         task ->
             if (
             task.name.contains("lint")
-                    || task.name.equals("clean")
                     || task.name.contains("Aidl")
                     || task.name.contains("mockableAndroidJar")
                     || task.name.contains("UnitTest")
@@ -39,4 +38,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.jcodecraeer:xrecyclerview:1.3.2'
+    compile 'com.jakewharton:butterknife:8.4.0'
 }
