--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile project(':baseadapter-recyclerview')
 }
