--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ android {
         task ->
             if (
             task.name.contains("lint")
-                    || task.name.equals("clean")
                     || task.name.contains("Aidl")
                     || task.name.contains("mockableAndroidJar")
                     || task.name.contains("UnitTest")
@@ -39,4 +38,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:24.1.1'
 }
