--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile project(':baseadapter-recyclerview')
+    compile project(':ptr-lib')
 }
