--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <!--所有activity必须配置label-->
         <activity
-            android:name=".HeaderFooterActivity"
+            android:name=".AwsomeHeaderActivity"
             android:label="1XrecyclerView/headerandfooter">
             <!--所有acivity都必须配置这个action和category-->
             <intent-filter>
