--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,25 +15,51 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity"
             android:label="1test/test"
-            android:theme="@android:style/Theme.NoTitleBar">
-            <!--所有acivity都必须配置这个action和category-->
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".WelcomShowModelPageActivity"
             android:label="1animation/welcomeani"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
-            >
-            <!--所有acivity都必须配置这个action和category-->
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
+
+            <!-- 所有acivity都必须配置这个action和category -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.SAMPLE_CODE" />
+            </intent-filter>
+        </activity>
+        <!-- 所有activity必须配置label -->
+        <activity
+            android:name=".ScaleAniTest"
+            android:label="1animation/scale">
+
+            <!-- 所有acivity都必须配置这个action和category -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.SAMPLE_CODE" />
+            </intent-filter>
+        </activity>
+        <!-- 所有activity必须配置label -->
+        <activity
+            android:name=".AddViewBeforeOncreate"
+            android:label="1animation/scalemanagtheme"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
