--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
-        <activity android:name=".SecondActivity"
-            android:label="1test/test"
-            >
-            <!--所有acivity都必须配置这个action和category-->
+        <!-- 所有activity必须配置label -->
+        <activity
+            android:name=".SecondActivity"
+            android:label="1test/test">
+
+            <!-- 所有acivity都必须配置这个action和category -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.SAMPLE_CODE" />
+            </intent-filter>
+        </activity>
+        <!-- 所有activity必须配置label -->
+        <activity
+            android:name=".WebpTestActivity"
+            android:label="1pic/webp">
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
