add：解决微信首页无法挂载menu以及点击id错误的问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:value="true" />˛
         <meta-data
             android:name="xposeddescription"
-            android:value="hook imei" />
+            android:value="hook menu" />
         <meta-data
             android:name="xposedminversion"
             android:value="30" />
