add:获取微信通讯录

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     provided files('XposedBridgeApi-87.jar')
-    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
 }
