--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,37 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
-        <activity android:name=".SecondActivity"
-            android:label="1test/test"
-            >
-            <!--所有acivity都必须配置这个action和category-->
+        <!-- 所有activity必须配置label -->
+        <activity
+            android:name=".SecondActivity"
+            android:label="1test/test">
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".MyService1"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.test.emptydemo.service1" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".MyService2"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":service2"
+            >
+            <intent-filter>
+                <action android:name="com.test.emptydemo.service2" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
