--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,143 +19,156 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity"
             android:label="1test/test">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity2"
             android:label="1test/test2">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity3"
             android:label="1test/test3">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity4"
             android:label="1test/test4">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity5"
             android:label="1test/test5">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity6"
             android:label="1test/test6">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity7"
             android:label="1test/test7">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity8"
             android:label="1test/test8">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity9"
             android:label="1test/test9">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity10"
             android:label="1test/test10">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity11"
             android:label="1test/test11">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity12"
             android:label="1test/test12">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--所有activity必须配置label-->
+        <!-- 所有activity必须配置label -->
         <activity
             android:name=".SecondActivity13"
             android:label="1test/test13">
-            <!--所有acivity都必须配置这个action和category-->
+
+            <!-- 所有acivity都必须配置这个action和category -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -163,49 +176,34 @@
             </intent-filter>
         </activity>
 
-        <!--<meta-data-->
-        <!--android:name="xposedmodule"-->
-        <!--android:value="true" />˛-->
-        <!--<meta-data-->
-        <!--android:name="xposeddescription"-->
-        <!--android:value="hook menu" />-->
-        <!--<meta-data-->
-        <!--android:name="xposedminversion"-->
-        <!--android:value="30" />-->
+        <!-- <meta-data -->
+        <!-- android:name="xposedmodule" -->
+        <!-- android:value="true" />˛ -->
+        <!-- <meta-data -->
+        <!-- android:name="xposeddescription" -->
+        <!-- android:value="hook menu" /> -->
+        <!-- <meta-data -->
+        <!-- android:name="xposedminversion" -->
+        <!-- android:value="30" /> -->
 
-        <!--mxmodule  start-->
-        <activity
-            android:name="com.fkzhang.wechatxposed.MainActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="de.robv.android.xposed.category.MODULE_SETTINGS" />
-            </intent-filter>
-        </activity>
-        <activity-alias
-            android:name="com.fkzhang.wechatxposed.MainActivity-Alias"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:targetActivity="com.fkzhang.wechatxposed.MainActivity"
-            android:windowSoftInputMode="stateAlwaysHidden">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity-alias>
+
+        <!-- mxmodule  start -->
 
         <meta-data
             android:name="xposedmodule"
             android:value="true" />
         <meta-data
             android:name="xposeddescription"
-            android:value="Add extra features to Wechat. 微信增加更多功能。" />
+            android:value="wx test" />
         <meta-data
             android:name="xposedminversion"
             android:value="46" />
 
-        <!--mxmodule-->
+        <!-- mxmodule -->
+        <service
+            android:name=".SuperService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
