update:为xposed的模块激活配置文件设置权限，然后写入配置，重启手机

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,9 @@ android {
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
     defaultConfig {
-        applicationId "com.test.emptydemo"
+        applicationId "com.test.enablexpmod"
         minSdkVersion 19
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
