--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     provided files('XposedBridgeApi-87.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.orhanobut:logger:1.15'
 }
