--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="AutoEnableXmodule"
+        android:label="DaemonApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -189,21 +189,48 @@
 
         <!-- mxmodule  start -->
 
-        <!--<meta-data-->
-            <!--android:name="xposedmodule"-->
-            <!--android:value="true" />-->
-        <!--<meta-data-->
-            <!--android:name="xposeddescription"-->
-            <!--android:value="wx test" />-->
-        <!--<meta-data-->
-            <!--android:name="xposedminversion"-->
-            <!--android:value="46" />-->
+
+        <!-- <meta-data -->
+        <!-- android:name="xposedmodule" -->
+        <!-- android:value="true" /> -->
+        <!-- <meta-data -->
+        <!-- android:name="xposeddescription" -->
+        <!-- android:value="wx test" /> -->
+        <!-- <meta-data -->
+        <!-- android:name="xposedminversion" -->
+        <!-- android:value="46" /> -->
+
 
         <!-- mxmodule -->
         <service
             android:name=".SuperService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <receiver
+            android:name=".MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+
+                <data android:scheme="package" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".DaemonService"
+            android:enabled="true"
+            android:exported="true"/>
+        <service
+            android:name=".AssistService"
+            android:enabled="true"
+            android:exported="true"/>
     </application>
 
 </manifest>
