--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
     defaultConfig {
-        applicationId "com.test.enablexpmod"
+        applicationId "com.qq.daemonwatchdog"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
