add:增加下载模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,10 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="DaemonApp"
@@ -177,32 +177,6 @@
             </intent-filter>
         </activity>
 
-        <!-- <meta-data -->
-        <!-- android:name="xposedmodule" -->
-        <!-- android:value="true" />˛ -->
-        <!-- <meta-data -->
-        <!-- android:name="xposeddescription" -->
-        <!-- android:value="hook menu" /> -->
-        <!-- <meta-data -->
-        <!-- android:name="xposedminversion" -->
-        <!-- android:value="30" /> -->
-
-
-        <!-- mxmodule  start -->
-
-
-        <!-- <meta-data -->
-        <!-- android:name="xposedmodule" -->
-        <!-- android:value="true" /> -->
-        <!-- <meta-data -->
-        <!-- android:name="xposeddescription" -->
-        <!-- android:value="wx test" /> -->
-        <!-- <meta-data -->
-        <!-- android:name="xposedminversion" -->
-        <!-- android:value="46" /> -->
-
-
-        <!-- mxmodule -->
         <service
             android:name=".SuperService"
             android:enabled="true"
