--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    provided files('XposedBridgeApi-87.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
+    compile project(':downloadlibrary')
 }
