opt:下载demo，其他优化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile project(':downloadlibrary')
+    compile 'com.orhanobut:logger:1.15'
 }
