opt:完善极光集成
# Conflicts:
#	app/src/main/AndroidManifest.xml
#	app/src/main/java/com/test/emptydemo/DaemonWatchDogService.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- Required -->
     <permission
-        android:name="com.test.enablexpmod.permission.JPUSH_MESSAGE"
+        android:name="com.qq.daemonwatchdog.permission.JPUSH_MESSAGE"
         android:protectionLevel="signature" />
 
     <!-- Required  一些系统要求的权限，如访问网络等-->
-    <uses-permission android:name="com.test.enablexpmod.permission.JPUSH_MESSAGE" />
+    <uses-permission android:name="com.qq.daemonwatchdog.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -213,7 +213,7 @@
                 <action android:name="cn.jpush.android.ui.PushActivity" />
 
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="com.test.enablexpmod" />
+                <category android:name="com.qq.daemonwatchdog" />
             </intent-filter>
         </activity>
         <!-- Required  SDK核心功能-->
@@ -243,7 +243,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.DaemonService" />
-                <category android:name="com.test.enablexpmod" />
+                <category android:name="com.qq.daemonwatchdog" />
             </intent-filter>
 
         </service>
@@ -254,7 +254,7 @@
             android:enabled="true">
             <intent-filter android:priority="1000">
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />   <!--Required  显示通知栏 -->
-                <category android:name="com.test.enablexpmod" />
+                <category android:name="com.qq.daemonwatchdog" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.USER_PRESENT" />
@@ -285,7 +285,7 @@
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" /> <!--Required  用户接收SDK通知栏信息的intent-->
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" /> <!--Required  用户打开自定义通知栏的intent-->
                 <action android:name="cn.jpush.android.intent.CONNECTION" /><!-- 接收网络变化 连接/断开 since 1.6.3 -->
-                <category android:name="com.test.enablexpmod" />
+                <category android:name="com.qq.daemonwatchdog" />
             </intent-filter>
         </receiver>
 
@@ -295,7 +295,7 @@
             android:value="developer-default" />
         <meta-data
             android:name="JPUSH_APPKEY"
-            android:value="ce7921d2370f2e2795782159" /> <!--  </>值来自开发者平台取得的AppKey-->
+            android:value="d6beaf044971533a4f12d11a" /> <!--  </>值来自开发者平台取得的AppKey-->
 
         <!--jpush end-->
 
