update：修改service的名字

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -326,7 +326,7 @@
         </receiver>
 
         <service
-            android:name=".DaemonService"
+            android:name=".QiqoQiaoDaemonService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
